--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_CONFIG=
+ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3.git
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/realme-kernel-opensource/realme_GTmaster_Q3s_Q3t_9-5G-Speed-AndroidT-kernel-source.git
+KERNEL_SOURCE_BRANCH=master
+KERNEL_CONFIG=lahaina_defconfig
 BUILD_ARGS:LLVM=1 LLVM_IAS=1
