--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3.git
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/realme-kernel-opensource/realme_GTmaster_Q3s_Q3t_9-5G-Speed-AndroidT-kernel-source.git
-KERNEL_SOURCE_BRANCH=master
-KERNEL_CONFIG=lahaina_defconfig
+KERNEL_SOURCE=https://github.com/pjgowtham/android_device_realme_lunaa.git
+KERNEL_SOURCE_BRANCH=lineage-22.1
+KERNEL_CONFIG=
 BUILD_ARGS:LLVM=1 LLVM_IAS=1
