--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3.git
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/realme-kernel-opensource/realme_GTmaster_Q3s_Q3t_9-5G-Speed-AndroidT-kernel-source.git
 KERNEL_SOURCE_BRANCH=master
-KERNEL_CONFIG=arch/arm64/configs/lahaina_defconfig
+KERNEL_CONFIG=build.config.msm.lahaina
 BUILD_ARGS:LLVM=1 LLVM_IAS=1
